# CDataStructures

./: .gitignore  Doxyfile  README.md  build.bat  build.sh  clean.bat  clean.sh  gen.bat  gen.sh  vector.exe.stackdump
CDataStructures/: CMakeLists.txt
CDataStructures/include/: CDataStructures.h
CDataStructures/include/CDataStructures/: _common.h  _config.h.in  _prelude.h  _vector_unsized.h  alloc.h  dynbuffer.h  functional.h  slist.h  stack.h  status.h  type.h  unarynode.h  utils.h  vector.h
CDataStructures/src/app/: CMakeLists.txt  alloc.c  dynbuffer.c  functional.c  slist.c  stack.c  vector.c
CDataStructures/src/lib/: CMakeLists.txt  _vector_unsized.c  alloc.c  dynbuffer.c  slist.c  stack.c  unarynode.c  vector.c
CDataStructures/src/test/: CMakeLists.txt  testing.cmake
docs/html/: annotated.html  classes.html  dir_4cf66e01352d6021c3afb5bbaad05687.html  dir_8241a8ca355aa35ac5cc63a5424cf85e.html  dir_8fa2357709b0bd94a0d7be6a9d960fdf.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  index.html  menudata.js  pages.html
docs/html/d0/d1d/: __prelude_8h.html  __prelude_8h_source.html
docs/html/d1/d13/: status_8h.html  status_8h_source.html
docs/html/d1/dad/: slist_8h.html  slist_8h_source.html
docs/html/d3/d72/: md__c_data_structures_index.html
docs/html/d5/d34/: struct__cds__unary__node__t.html
docs/html/d5/d5b/: struct__cds__vector__t.html
docs/html/d5/d60/: utils_8h.html  utils_8h_source.html
docs/html/d6/d68/: vector_8h.html  vector_8h_source.html
docs/html/d6/df5/: unarynode_8h.html  unarynode_8h_source.html
docs/html/d7/de0/: stack_8h.html  stack_8h_source.html
docs/html/d7/dfc/: struct__cds__slist__node__t.html
docs/html/d8/d1e/: struct__cds__stack__t.html
docs/html/d8/dea/: functional_8h.html  functional_8h_source.html
docs/html/d9/dce/: __common_8h.html  __common_8h_source.html
docs/html/d9/dd6/: _r_e_a_d_m_e_8md.html
docs/html/db/d04/: _c_data_structures_8h.html  _c_data_structures_8h_source.html
docs/html/db/d6a/: struct__cds__slist__t.html
docs/html/df/dcf/: index_8md.html
docs/html/df/def/: type_8h.html  type_8h_source.html
docs/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  enums_0.js  enumvalues_0.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  files_7.js  functions_0.js  functions_1.js  pages_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_2.js  (+5 more)
